[workspace]
members = [
    "crates/types",
    "crates/utils",
    "crates/proto-gen",
    "crates/parser-core",
    "crates/parser-pump-amm",
    "crates/parser-pumpfun",
    "crates/parser-raydium",
    "crates/grpc-server",
    "crates/instruction-parser",
]

[package]
name = "actual-rust-parser"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.197", features = ["derive"]}
anyhow = "1.0.62"
backoff = { version = "0.4.0", features = ["tokio"] }
bs58 = "0.5.1"
clap = { version = "4.3.0", features = ["derive"] }
env_logger = "0.11.3"
futures = "0.3.24"
log = "0.4.17"
tokio = { version = "1.21.2", features = ["rt-multi-thread", "fs"] }
tonic = "0.12.1"
yellowstone-grpc-client = "4.0.0"
yellowstone-grpc-proto = { version = "4.0.0", default-features = false ,features = ["plugin"] }
serde_json = "1.0.135"
parser-core = { workspace = true }
reqwest = "0.11"

[workspace.dependencies]
types = { path = "crates/types" }
parser-core = { path = "crates/parser-core" }
utils = { path = "crates/utils" }
parser-pump-amm = { path = "crates/parser-pump-amm" }
parser-pumpfun = { path = "crates/parser-pumpfun" }
instruction-parser = { path = "crates/instruction-parser" }
