[package]
name = "parser-core"
version = "0.1.0"
edition = "2024"

[dependencies]
types = { workspace = true }
utils = { workspace = true }
parser-pump-amm = { workspace = true }
parser-pumpfun = { workspace = true }
instruction-parser = { workspace = true }
yellowstone-grpc-proto = { version = "4.0.0", default-features = false, features = ["plugin"] }